SOLR-17600: Refactor `writeMap` implementations to use `SimpleOrderedMap` for consistency in plugin and handler serialization